--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
-title: Wiki
-email: hello@world.com
+title: Everything Clare Knows (copied from Ably)
 description: >- # this means to ignore newlines until "baseurl:"
-  Wiki for all fun things
+  A wiki spite hosting ALL OF CLARE'S NOTES. Be afraid. Be very afraid.  
+  Or if you like you can just be excited! Clare is.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://clare-wiki.herokuapp.com/" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: claresudbery
+github_username:  claresudbery
 
 # Build settings
 markdown: redcarpet
