Rearranged pages, wrote home page, added permalinks, removed deadwood.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Everything Clare Knows (copied from Ably)
+title: Everything Clare Knows
 description: >- # this means to ignore newlines until "baseurl:"
   A wiki site hosting ALL OF CLARE'S NOTES. Be afraid. Be very afraid.  
   Or if you like you can just be excited! Clare is.
