--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: ruby
 rvm:
-- 2.7.2
+- 2.6.5
 
-# before_script:
-#  - chmod +x ./script/ # or do this locally and commit
+before_script:
+ - chmod +x ./script/ # or do this locally and commit
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-# script: ./script/
+script: ./script/
 
 env:
   global:
