--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ rvm:
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+  - JEKYLL_ENV=production
 
 sudo: false # route your build to the container-based infrastructure for a faster build
