--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,5 @@
 {
   "propertiesInDocument": "hidden",
-  "attachmentFolderPath": "resources/images"
+  "attachmentFolderPath": "resources/images",
+  "alwaysUpdateLinks": true
 }
